kubernetes/deployment-service-booking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookingservice
  namespace: online-event-booking-22i0745
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookingservice
  template:
    metadata:
      labels:
        app: bookingservice
    spec:
      containers:
      - name: bookingservice
        image: 22i0745/booking-service:latest
        ports:
        - containerPort: 5002
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: bookingservice
  namespace: online-event-booking-22i0745
spec:
  selector:
    app: bookingservice
  ports:
  - port: 5002
    targetPort: 5002
  type: ClusterIP
