kubernetes/deployment-service-notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificationservice
  namespace: online-event-booking-22i0745
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notificationservice
  template:
    metadata:
      labels:
        app: notificationservice
    spec:
      containers:
      - name: notificationservice
        image: 22i0745/notification-service:latest
        ports:
        - containerPort: 5003
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: notificationservice
  namespace: online-event-booking-22i0745
spec:
  selector:
    app: notificationservice
  ports:
  - port: 5003
    targetPort: 5003
  type: ClusterIP
