kubernetes/deployment-service-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  namespace: online-event-booking-22i0745
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
      - name: userservice
        image: 22i0745/user-service:latest
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: userservice
  namespace: online-event-booking-22i0745
spec:
  selector:
    app: userservice
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
